--- a/solution-code/views/authentication/login.ejs
+++ b/solution-code/views/authentication/login.ejs
@@ -1,4 +1,16 @@
+
 <div class="container">
+  <% if ( message.length !== 0 ) { %>
+    <div class="row">
+      <div class="col-sm-12">
+          <div class="alert alert-danger alert-dismissible" role="alert">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <strong>Error!</strong> <%= message[0] %>
+            </div>
+      </div>
+    </div>
+  <% } %>
+
   <div class="row">
     <div class="col-sm-12">
       <form action="/login" method="post">
