--- a/solution-code/views/layouts/main-layout.ejs
+++ b/solution-code/views/layouts/main-layout.ejs
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>IronTumblr</title>
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -29,11 +28,17 @@
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
+
           <ul class="nav navbar-nav navbar-right">
             <% if (!isAuthenticated) { %>
               <li><a href="/login">Login</a></li>
-              <li><a href="/signup">Login</a></li>
+              <li><a href="/signup">Signup</a></li>
             <% } else { %>
+              <li>
+                <form method="POST" action="/logout">
+                  <button type="submit" class="btn btn-link">Logout</button>
+                </form>
+              </li>
               <li><a href="/posts/new">New Post</a></li>
               <li><img class="profile-picture" src="<%= user.picPath %>"></li>
             <% } %>
@@ -44,6 +49,7 @@
     <div class="main-container">
       <%- body -%>
     </div>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
